--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "^0.0.25",
+    "appwrite": "^15.0.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,10 +39,12 @@
     "lucide-react": "^0.438.0",
     "next": "^14.2.12",
     "next-themes": "^0.3.0",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-easy-crop": "^5.0.8",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "shadcn": "^1.0.0",
     "tailwind-merge": "^2.5.2",
